--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -22,12 +22,14 @@
                 <div class="course-editor-section hide">
                     <div class="activity-editor hide">
                         <div class="actvity-editor-header editor-header">
-                            <div class="left header-left">
-                                <span class="activity-name">Activity Name</span>
-                                <button type="button" class="button-hollow-blue save_edit_activity" data-current-activity-id="">
-                                  Edit
-                                </button>
+                            <div class="left header-left activity-name-label">
+                                <span class="activity-name ">Activity Name</span>
                             </div>
+                                
+                            <button type="button" class="right button-hollow-blue save_edit_activity" data-current-activity-id="">
+                                  Edit
+                            </button>
+                            
                             <div class="right custom_dropdown">
                                 <a href="">More</a>
                                 <ul class="dropdown_content right_align">
@@ -39,6 +41,8 @@
                                     </li>
                                 </ul>
                             </div>
+
+                            
                         </div>
                         <div class="editor-tool hide">
                             <div class="editor_actions">
