--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -799,10 +799,10 @@ ul.horizontal_tabs_gstudio {
         color: #fff;
         
         /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#49667a+0,49667a+100&0+0,0.5+100 */
-background: -moz-linear-gradient(top,  rgba(73,102,122,0) 0%, rgba(73,102,122,0.8) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(73,102,122,0) 0%,rgba(73,102,122,0.8)100%);/* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(73,102,122,0) 0%,rgba(73,102,122,0.8)100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0049667a', endColorstr='#8049667a',GradientType=0 ); /* IE6-9 */
+        background: -moz-linear-gradient(top,  rgba(73,102,122,0) 0%, rgba(73,102,122,0.8) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,  rgba(73,102,122,0) 0%,rgba(73,102,122,0.8)100%);/* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,  rgba(73,102,122,0) 0%,rgba(73,102,122,0.8)100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0049667a', endColorstr='#8049667a',GradientType=0 ); /* IE6-9 */
 
         .group_title {
             font-size: 28px;
@@ -825,7 +825,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0049667a', e
     .group_sections_content {
         min-height: 400px;
         background-color: #fff;
-        padding-top: 20px;
+        
     }
 }
 
@@ -1973,7 +1973,7 @@ ul.jqtree-tree .jqtree-toggler {
     height: 50px;
     background: #fff;
     padding: 5px 15px;
-    box-shadow: 1px 0px 7px #000;
+    box-shadow: 1px 0px 0px #000;
 
     .back_to_group {
         padding: 0px 15px 0px 10px;
@@ -2249,7 +2249,23 @@ ul.jqtree-tree .jqtree-toggler {
 
 
         .add-lesson {
-            margin: 10px 50px;
+            //margin: 10px 50px;
+            margin-top: 5px;
+            margin-left: 26.9px;
+            //padding-top:5px;
+        }
+
+        .add_activity{
+               margin-top: 3px;
+               margin-left: -47.1px;
+
+        }
+
+        .create_activity{
+               margin-top: 0px;
+               margin-left: -7.1px;
+              // padding-top: 5px;
+
         }
 
 /* Course edit in the edit mode. */
@@ -2449,14 +2465,14 @@ ul.jqtree-tree .jqtree-toggler {
 
     .dropdown_content {
         background-color: #fff;
-        border-radius: 3px;
+        border-radius: 10px;
         display: none;
         position: absolute;
         top: 30px;
         border: 1px solid #ccc;
 
         &.left_align {
-            left: -10px;
+            left: -54px;
         }
 
         &.right_align {
@@ -2505,7 +2521,7 @@ ul.jqtree-tree .jqtree-toggler {
     color: #c9d1d8;
     font-weight: 600;
     letter-spacing: 0.9px;
-    padding: 3px 10px;
+    padding: 1.4px 6px 0.7px 8.5px;
     // //font-size: 13px;
     cursor: pointer;
     @include transition-two-prop(color, border-color);
@@ -2520,4 +2536,25 @@ ul.jqtree-tree .jqtree-toggler {
     letter-spacing: 0.9px;
     padding: 2px 10px;
     @include transition-two-prop(color, border-color);
+}
+
+.save_edit_activity{
+    margin-right: 16.9px;
+    margin-top: 37.3px;
+}
+
+.activity-name{
+    margin-left: 20px;
+    margin-top: 5px;
+}
+
+.activity-name-label{
+    width: 50%;
+    margin-left: 20px;
+    margin-top: 5px;
+
+}
+
+.create_activity_new{
+    margin-left: -15px;
 }
