jhapp list css fixed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -4,13 +4,17 @@
 {% load ndf_tags %}
 {% get_group_name groupid as group_name_tag %}
 <div class="editor_modal_content">
-            <div class="row">
-                <div row style="width: 65%" class="app_desc">
-                    <h3>Insert Assessment</h3>
-                <input type="text" placeholder="" class="required" id ="paste-area-assessment"  />
+            <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+            <div class="medium-12 columns">
+                <h3>Insert Assessment</h3>
+                <div class="left small-12 medium-9 columns" class="app_desc">
+                <input type="text" placeholder="" class="required" id ="paste-area-assessment"/>
+                </div>
+                <div class="right small-12 medium-3 columns">
                     <button inline type="button"  class="right orange-button" id="insert_assessment" >Add Assessment</button>
                 </div>
             </div>
+</div>
             <div class="row">
                 <br>
                 <div style="width: 65%" class="app_desc">
@@ -18,6 +22,9 @@
                 </div>
                 <div style="width: 65%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_policequad" >Insert PoliceQuad</button>
+                </div>
+                <div style="width: 65%" class="app_desc">
+                    <button type="button"  class="right orange-button" id="insert_biomechanic" >Insert BioMechanic</button>
                 </div>
             </div>
 </div>
