--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -259,12 +259,12 @@
                                 <li>
                                     <a href="#" data-reveal-id="add-activity-modal" class="add_activity">Create new</a>
                                 </li>
+                                <li>
+                                    <a href="#" data-reveal-id="select-activity-page">Select from Activity Pages</a>
+                                </li>
                             <!--
                                 <li>
                                     <a href="#">Create from existing template</a>
-                                </li>
-                                <li>
-                                    <a href="#">Select from Pages</a>
                                 </li>
                             -->
                             </ul>
@@ -285,6 +285,12 @@
       <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 
     </div>
+
+    <div id="select-activity-page" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+      <h3>Choose Activity Page</h3>
+      <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+    </div>
+
 <div id="group_imgs_on_modal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
       <h3>Choose Templates</h3>
       <!-- <input type="text" id="activity-name">
@@ -730,6 +736,12 @@
         $(document).on('opened.fndtn.reveal', '#group_imgs_on_modal[data-reveal]', function () {
           // var modal = $(this); // console.log(this);
           getTemplates();
+        });
+
+
+        $(document).on('opened.fndtn.reveal', '#select-activity-page[data-reveal]', function () {
+          var modal = $(this); // console.log(this);
+          // getTemplates();
         });
 
 
