--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -31,7 +31,7 @@
 
 				{% if is_gstaff %}
 					<a href="{% url 'explore_basecourses' %}" class="secondary-header-tabs {%if title == 'base courses'%} active{% endif %}">
-						Draft Course
+						Draft Course Unit
 					</a>
 				{% endif %}
 
