add div to set scope for activities in lesson authoring

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -68,8 +68,11 @@
                             </div>
                             Editor tool will come here. //CK Editor
                         </div>
+                        <div id="scstyle">
+                            
                         <div id="activity-content">
 
+                        </div>
                         </div>
                     </div>
                     <div class="lesson-editor hide">
