--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -25,11 +25,11 @@
                             <div class="left header-left activity-name-label">
                                 <span class="activity-name ">Activity Name</span>
                             </div>
-                                
+
                             <button type="button" class="right button-hollow-blue save_edit_activity" data-current-activity-id="">
                                   Edit
                             </button>
-                            
+
                             <div class="right custom_dropdown">
                                 <a href="">More</a>
                                 <ul class="dropdown_content right_align">
@@ -39,13 +39,15 @@
                                     <li>
                                         <a href="#" data-reveal-id="existing_template_modal">Create from existing template</a>
                                     </li>
+                                    <!--
                                     <li>
                                         <a href="#" class="delete_entity">Delete</a>
                                     </li>
+                                    -->
                                 </ul>
                             </div>
 
-                            
+
                         </div>
                         <div class="editor-tool hide">
                             <div class="editor_actions">
@@ -78,9 +80,11 @@
                             <div class="right custom_dropdown">
                                 <a href="">More</a>
                                 <ul class="dropdown_content right_align">
+                                    <!--
                                     <li>
                                         <a href="#">Delete</a>
                                     </li>
+                                    -->
                                 </ul>
                             </div>
                         </div>
@@ -234,8 +238,10 @@
                     <ul class="entity_actions">
                         <li class="lesson_move_up">Move up</li>
                         <li class="lesson_move_down">Move down</li>
+                        <!--
                         <li class="lesson_edit">Edit</li>
                         <li class="lesson_delete">Delete</li>
+                        -->
                     </ul>
                 </div>
             </a>
@@ -249,8 +255,10 @@
                                     <ul class="entity_actions">
                                         <li class="activity_move_up">Move up</li>
                                         <li class="activity_move_down">Move down</li>
+                                        <!--
                                         <li class="activity_edit">Edit</li>
                                         <li class="activity_delete">Delete</li>
+                                        -->
                                     </ul>
                                 </div>
                             </a>
@@ -292,6 +300,7 @@
 
     <div id="select-activity-page" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
       <h3>Choose Activity Page</h3>
+      <div id="activity-container"></div>
       <a class="close-reveal-modal" aria-label="Close">&#215;</a>
     </div>
 
@@ -740,6 +749,37 @@
                     });
         }
 
+        function getActivityPages() {
+            $.ajax({
+                      type: "GET",
+                      url: "{% url 'get_group_pages' group_id %}",
+                      datatype: "html",
+                      data:{
+
+                      },
+                        success: function(data) {
+                          console.log(data);
+                      $("#activity-container").html(data);
+                            // $('#existing_template_modal').foundation('reveal', 'open');
+
+                      $(".template-list").click(function(event){
+                          // get html content in var
+                          var nodeContent = $(this).children('div').attr("data-content");
+                          if (editorMode != "edit"){
+                              // console.log("jjjjjjjjjjjjjjj " + editorMode);
+                            editNode(nodeContent);
+                          }
+                          else{
+                            CKEDITOR.instances['ckeditor_textarea'].setData(nodeContent);
+                          }
+                          // Open ckeditor and append content of node in ckeditor
+                          // openCkEditor('#activity-content', "BasicToolbar", nodeContent);
+                          $('#existing_template_modal').foundation('reveal', 'close');
+                        });
+                      }
+                    });
+        }
+
         $(document).on('opened.fndtn.reveal', '#existing_template_modal[data-reveal]', function () {
           // var modal = $(this); // console.log(this);
           getTemplates();
@@ -748,7 +788,7 @@
 
         $(document).on('opened.fndtn.reveal', '#select-activity-page[data-reveal]', function () {
           var modal = $(this); // console.log(this);
-          // getTemplates();
+          getActivityPages();
         });
 
 
