--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="medium-12 columns editor-div">
+                <div class="large-12 columns editor-div">
                     {% include "ndf/html_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value="" ckeditor_toolbar="GeneralToolbar" %}
                 </div>
                 
@@ -31,7 +31,7 @@
         </div>
     </form>
 </div>
-<div class="page-view reveal-modal medium" id="scstyle" data-reveal aria-hidden="true" role="dialog">
+<div class="page-view reveal-modal large" id="scstyle" data-reveal aria-hidden="true" role="dialog">
     <div class="page-content"></div>
     <a class="right edit-page">Edit</a>
     <a class="close-reveal-modal" >&#215;</a>
