--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2137,6 +2137,7 @@ ul.jqtree-tree .jqtree-toggler {
         /*Overriding default*/
         .accordion .accordion-navigation > .content, .accordion dd > .content {
             padding: 0px;
+            padding-left:0px;
         }
 
         /*Custom css*/
@@ -2160,9 +2161,9 @@ ul.jqtree-tree .jqtree-toggler {
 
                     &.accordion-navigation {
                         position: relative;
+                        padding-left:0px;
 
                         &>a {
-                            padding-left: 50px;
                             &:before {
                                 // content: '&#8250';
                                 position: absolute;
@@ -2309,8 +2310,9 @@ ul.jqtree-tree .jqtree-toggler {
 
         .add-lesson {
             //margin: 10px 50px;
-            margin-top: 5px;
-            margin-left: 26.9px;
+            margin-top: 20px;
+            margin-left: 20px;
+            float: left;
             //padding-top:5px;
         }
 
@@ -2336,7 +2338,7 @@ ul.jqtree-tree .jqtree-toggler {
             }
             .course_tree {
                 @include transition-prop(all);
-                width: 20%;
+                width: 27%;
                 background-color: #2a6882;
 
                 .course-lessons {
@@ -2410,7 +2412,7 @@ ul.jqtree-tree .jqtree-toggler {
             }
 
             .course-editor-section {
-                width: 79.5%;
+                width: 72%;
                 opacity: 1;
                 overflow-x: auto;
                 //display: inline-block;
@@ -2539,8 +2541,7 @@ ul.jqtree-tree .jqtree-toggler {
         }
         
         li {
-            width:  110px;
-            padding: 5px 25px;
+            padding: 10px 35px;
             list-style: none;
             white-space: nowrap;
 
