--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
@@ -1,5 +1,5 @@
 {% for each in cursor %}
-    <a href="#" class="{{card_class}}" data-id="{{each._id}}" data-name="{{each.name}}">
+    <a href="#" class="{{card_class}}" data-id="{{each.pk}}" data-name="{{each.name}}">
     <div class="small-12 medium-6 large-3 columns">
 
         <div class="asset_tile">
