The editor buttond modified

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -272,7 +272,7 @@
                             <a href="#" class="button-hollow-grey add_activity">Add Activity</a>
                             <ul class="dropdown_content left_align" >
                                 <li>
-                                    <a href="#" data-reveal-id="add-activity-modal" class="right add_activity">Create new</a>
+                                    <a href="#" data-reveal-id="add-activity-modal" class="add_activity">Create new</a>
                                 </li>
                                 <li>
                                     <a href="#" data-reveal-id="select-activity-page">Select from Activity Pages</a>
