--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2218,6 +2218,7 @@ ul.jqtree-tree .jqtree-toggler {
                             // //font-size: 45px;
                             line-height: 55px;
                             color: #d7d7d7;
+
                         }
 
                         .course-activities {
@@ -2225,7 +2226,7 @@ ul.jqtree-tree .jqtree-toggler {
                             &>li {
                                 list-style: none;
                                 border-top: 1px solid #e9e9e9;
-                                padding: 10px 0px 10px 90px;
+                                padding: 10px 0px 10px 30px;
                                 background: inherit;
                                 @include transition-prop(border-color);
 
@@ -2318,7 +2319,7 @@ ul.jqtree-tree .jqtree-toggler {
 
         .add_activity{
                margin-top: 3px;
-               margin-left: -47.1px;
+               //margin-left: -47.1px;
 
         }
 
@@ -2559,7 +2560,7 @@ ul.jqtree-tree .jqtree-toggler {
 
     a {
         color: #999999;
-        margin-left: 25px;
+       // margin-left: 25px;
     }
 }
 
