cancel btn for page activity

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -27,12 +27,12 @@
             <input type="hidden" name="node_id" class="form_node_id">
 
             <input type="submit" class="orange-button" class="saveActivityPage" value="Save">
-            <input type="button" class="orange-button" cancel-page-create" value="Cancel">
+            <input type="button" class="orange-button cancel-page-create" value="Cancel">
         </div>
     </form>
 </div>
 <div class="page-view reveal-modal medium" id="scstyle" data-reveal aria-hidden="true" role="dialog">
-    
+
     <div class="page-content"></div>
     <a class="right edit-page">Edit</a>
     <a class="close-reveal-modal" >&#215;</a>
