--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -17,14 +17,17 @@
 </div>
             <div class="row">
                 <br>
-                <div style="width: 65%" class="app_desc">
+                <div style="width: 70%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_ost" >Insert Open Story Tool</button>
                 </div>
-                <div style="width: 65%" class="app_desc">
+                <div style="width: 55%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_policequad" >Insert PoliceQuad</button>
                 </div>
-                <div style="width: 65%" class="app_desc">
+                <div style="width: 55%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_biomechanic" >Insert BioMechanic</button>
+                </div>
+                <div style="width: 55%" class="app_desc">
+                    <button type="button"  class="right orange-button" id="insert_turtle" >Insert TurtleJS</button>
                 </div>
             </div>
 </div>
